# DWB

./: .gitignore  .replit  LICENSE  LICENSE.markdown  LICENSE.md  Makefile  README.markdown  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/.broken.github/: pdoc3-generate.-yml  test._yml
.github/PULL_REQUEST_TEMPLATES/: meta.md
.github/workflows/: codeql-analysis.yml  documentation.yml  flake8.yml  pdoc3-generate.yml  sphinx-documentation.yml  test.yml
assets/: README.md
assets/json/: drama.json
assets/template/: .env-template
docs/: .keepfile
scripts/: dep.sh  run.sh
src/: badwords.py  bot.py  dashpyhelper.py  keepalive.py  requirements.txt
usr/config/: settings.json
usr/data/json/: help.json  insults.json
