[tool.poetry]
name = "Dash"
version = "v1.1.0"
description = "Dash is a Discord bot for the Official FTB wiki's Discord inspired by SatanicSanta's IRC wiki bot."
authors = ["Tomodachi94 <tomodachi94@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
requests = "^2.25.1"
pymediawiki = "^0.7.0"
flask = "^1.1.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
