[tool.poetry]
name = "Dash"
version = "v1.1.0"
description = "Dash is a Discord bot for the Official FTB wiki's Discord inspired by SatanicSanta's IRC wiki bot."
authors = ["Tomodachi94 <tomodachi94@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6.0"
requests = "^2.25.1"
pymediawiki = "^0.7.0"
flask = "^1.1.2"
python-dotenv = "^0.15.0"
sh = "^1.14.1"
typing-extensions = "^3.7.4"
lockfile = "^0.12.2"
keyring = "^22.0.1"
importlib-metadata = "^3.4.0"
ipaddr = "^2.2.0"
ordereddict = "^1.1"
python-ntlm = "^1.1.0"
htmlparser = "^0.0.2"
cryptography = "^3.3.1"
mypy-extensions = "^0.4.3"
zipp = "^3.4.0"
brotli = "^1.0.9"
lxml = "^4.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
